# Linked-lists

./: .gitignore  CHANGELOG.md  README.md  linked-list.cabal
.github/workflows/: haskell.yml
app/: Main.hs
app/Src/: Core.hs  Environment.hs  Models.hs
app/Src/Middlewares/: Auth.hs  DatabaseFunctions.hs  DateTime.hs  MailService.hs
app/Src/Models/: User.hs
app/Src/Services/: Handler.hs  Routes.hs
app/Src/Services/Authentication/: Logic.hs  Route.hs  Types.hs
app/Src/Services/Links/: Logic.hs  Route.hs  Types.hs
